# MCPCC

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  mcpcc_annot.h
.github/workflows/: ci.yml
crates/mcpcc/: Cargo.toml
crates/mcpcc-mcp-server/: Cargo.toml
crates/mcpcc-mcp-server/src/: main.rs
crates/mcpcc-mcp-server/tests/: stdio_call_tool_run_raw.rs  stdio_call_tool_structured.rs  stdio_list_tools.rs  stdio_standard_protocol.rs
crates/mcpcc/src/: lib.rs  main.rs
crates/mcpcc/tests/: annotations.rs  argp.rs  cli_flags.rs  e2e_stdio.rs  extractor_order.rs  getopt_long.rs  llm.rs  mcp_json.rs  passthrough.rs  print_cc.rs  server_copy.rs  source_sidecar.rs
docs/: SPEC_mcp.json.md
samples/: annotated.c  annotated_advanced.c  argp.c  argp_advanced.c  getopt_long.c  getopt_long_advanced.c  no_cli.c  none.c
scripts/: e2e.sh
scripts/ralph/: prd.json  progress.txt
tasks/: prd-mcpcc.md
test-projects/cmake_calc/: CMakeLists.txt  mcpcc-gcc.sh  run_mcp_demo.sh
test-projects/cmake_calc/src/: calc.c  calc.h  lexer.c  lexer.h  main.c
