[workspace]
members = ["crates/mcpcc", "crates/mcpcc-mcp-server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/aytzey/MCPCC"
authors = ["aytzey and mcpcc contributors"]
keywords = ["mcp", "compiler", "llm", "ai", "cli"]
categories = ["command-line-utilities", "development-tools::build-utils"]

