[package]
name = "mcpcc-mcp-server"
description = "Generic stdio MCP server template copied next to every mcpcc-compiled binary"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
