[package]
name = "mcpcc"
description = "Drop-in gcc/clang wrapper that turns every compiled C/C++ binary into a typed, AI-usable MCP tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
object = "0.36"
serde_json = "1.0"
sha2 = "0.10"
ureq = { version = "2.12", features = ["json"] }
